Admin Authentication System

--- a/Business_Solutions/templates/Layout.html
+++ b/Business_Solutions/templates/Layout.html
@@ -80,7 +80,7 @@
                         </a>
                     </li>
                     <li class="navItem">
-                        <a href="#">
+                        <a href="{%url 'admin-logout'%}">
                             <img src="{%static 'icons/nav/logout.png'%}" width="25" alt="Logout"/>    
                             <div class="navtitle">Log Out</div>
                         </a>
@@ -109,7 +109,7 @@
                                 Settings
                             </a>
                             <li><hr class="dropdown-divider"></li>
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" href="{%url 'admin-logout'%}">
                                 <img src="{% static 'icons/nav/logout.png'%}" width="25" alt="Logout"/>
                                 Logout
                             </a>
