--- a/Business_Solutions/templates/inventory/inventory.html
+++ b/Business_Solutions/templates/inventory/inventory.html
@@ -16,7 +16,7 @@
     
     <div class="container card height-100 p-3">
         <div class="row height-45">
-            <a href="" class="col effect m-1  d-flex justify-content-center align-items-center">
+            <a href="{%url 'sales-list'%}" class="col effect m-1  d-flex justify-content-center align-items-center">
                 <div class="rounded-circle alert alert-info text-center p-4 d-flex flex-column justify-content-center align-items-center" style="width: 250px; height: 250px;">
                     <img src="{% static 'icons/inventory/sale.png'%}" width="130" alt=""/>
                     <div class="fs-bold fs-5">Sales</div>
