--- a/Business_Solutions/templates/authentication/singup.html
+++ b/Business_Solutions/templates/authentication/singup.html
@@ -79,11 +79,26 @@
                 <div class="fw-bold fs-2 text-white">Welcome to <span class="branding fs-2"><span class="gedget">Amar</span> Shop</span></div>
                 <div class="mt-2 text-center fs-5 fw-medium">Admin Panel</div>
                 <div class="mt-2 text-center fs-6 fw-lighter">Registration as admin to manage your online store</div>
-                <button class="btn btn-outline-warning mt-5">Watch Demo</button>
+                <button class="btn btn-outline-warning mt-5" data-bs-toggle="modal" data-bs-target="#exampleModal">Watch Demo</button>
             </div>
         </div>
 
     </div>
+
+    <!-- Video Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Applicaton Demo</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body p-0 m-0">
+                <iframe class="w-full" height="550" src="https://www.youtube.com/embed/i9nFG0pAsr4" title="Deque" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
 
 </body>
 </html>
