--- a/Business_Solutions/templates/inventory/sales/salesList.html
+++ b/Business_Solutions/templates/inventory/sales/salesList.html
@@ -16,7 +16,7 @@
                 <img src="{%static 'icons/inventory/back.png'%}" width="20" alt=""/>
             </a>
             <div class="fs-4 fw-bold">Sales</div>
-            <a href="" class="ms-2 btn btn-sm btn-success">New Sale</a>
+            <a href="{%url 'new-sale'%}" class="ms-2 btn btn-sm btn-success">New Sale</a>
         </div>
         <div class="card-header">
             <div class="d-flex align-items-center justify-content-between">
