--- a/Business_Solutions/templates/suppliers/supplierList.html
+++ b/Business_Solutions/templates/suppliers/supplierList.html
@@ -12,7 +12,7 @@
 
 <!-- main body -->
 {%block main%}
-<div class="supplier p-2">
+<div class="supplier">
     
     <div class="card height-100">
         <div class="card-header d-flex justify-content-between align-items-center">
