--- a/Business_Solutions/templates/inventory/sales/createClientUser.html
+++ b/Business_Solutions/templates/inventory/sales/createClientUser.html
@@ -11,7 +11,7 @@
 {%block main%}
 <div class="inventory">
     <div class="card height-100">
-        <div class="card m-5">
+        <div class="card shadow-lg m-5">
             <div class="card-header fw-bold text-center text-success fs-5">User Information</div>
             <div class="card-body">
                 <form method="post">
