--- a/Business_Solutions/templates/inventory/sales/invoiceAddItem.html
+++ b/Business_Solutions/templates/inventory/sales/invoiceAddItem.html
@@ -11,20 +11,59 @@
 {%block main%}
 <div class="inventory">
     <div class="card height-100 d-flex justify-content-center align-items-center">
-        <div class="card shadow-lg">
+        <div class="card shadow-lg width-50">
             <div class="card-header text-center text-success fs-4 fw-bold">Add Invoice Item</div>
             <div class="card-body">
                 <form method="post">
-                    {%csrf_token%}
-                    {{form.as_p}}
+                    {% csrf_token %}
+                    <div class="mb-3">
+                        <label for="id_category">Category:</label>
+                        {{ form.category }}
+                    </div>
+                    <div class="mb-3">
+                        <label for="id_brand">Brand:</label>
+                        {{ form.brand }}
+                    </div>
+                    <div class="mb-3">
+                        <label for="id_product">Product:</label>
+                        {{ form.product }}
+                    </div>
+                    <div class="mb-3">
+                        <label for="id_quantity">Quantity:</label>
+                        {{ form.quantity }}
+                    </div>
                     <div>
                         <a href="{%url 'invoice-list' email%}" class="btn btn-sm btn-outline-secondary">Cancel</a>
                         <button type="submit" class="btn btn-sm btn-success">Add</button>
                     </div>
-                    
                 </form>
             </div>
         </div>
     </div>
 </div>
 {%endblock main%}
+
+{%block script%}
+<script>
+    $(document).ready(function() {
+        $('#id_category, #id_brand').change(function() {
+            var category_id = $('#id_category').val();
+            var brand_id = $('#id_brand').val();
+            $.ajax({
+                url: '{% url "get_filtered_products" %}',
+                data: {
+                    'category_id': category_id,
+                    'brand_id': brand_id
+                },
+                dataType: 'json',
+                success: function(data) {
+                    $('#id_product').empty();
+                    $.each(data.products, function(key, value) {
+                        $('#id_product').append($('<option></option>').attr('value', value.id).text(value.product__model));
+                    });
+                }
+            });
+        });
+    });
+</script>
+{%endblock script%}
