--- a/Business_Solutions/templates/Layout.html
+++ b/Business_Solutions/templates/Layout.html
@@ -16,7 +16,7 @@
     {%block link%}{%endblock link%}
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
     <link rel="stylesheet" href="{% static 'css/layout.css'%}">
-    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
 
@@ -123,7 +123,8 @@
 
                 {%endblock main%}
             </div>
-
+            {%block script%}
+            {%endblock script%}
             <script type="text/javascript" src="{%static 'js/layout.js'%}"></script>
         </div>
     </div>
