--- a/Business_Solutions/static/css/inventory.css
+++ b/Business_Solutions/static/css/inventory.css
@@ -51,3 +51,19 @@ ul{
     width: 80px;
     height: auto;
 }
+
+.m-height-100{
+    min-height: 100%;
+}
+
+.sticky-bottom {
+    position: sticky;
+    bottom: 0;
+    background-color: white;
+    z-index: 1;
+}
+
+.table-container {
+    height: 400px;
+    overflow-y: auto;
+}
