--- a/Business_Solutions/templates/inventory/sales/createClientUser.html
+++ b/Business_Solutions/templates/inventory/sales/createClientUser.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                     <div class="mt-4 d-flex justify-content-between align-items-center">
-                        <a href="" class="btn btn-sm btn-outline-secondary">Cancel</a>
+                        <a href="{%url 'sales-list'%}" class="btn btn-sm btn-outline-secondary">Cancel</a>
                         <button type="submit" class="btn btn-sm btn-success">Next</button>
                     </div>
                 </form>
