--- a/Business_Solutions/templates/inventory/sales/invoiceRemoveItem.html
+++ b/Business_Solutions/templates/inventory/sales/invoiceRemoveItem.html
@@ -16,7 +16,13 @@
             <div class="card-body">
                 <form method="post">
                     {%csrf_token%}
-                    <div class="text-center">Product: {{invoiceItem.product}}</div>
+                    <div class="d-flex justify-content-center align-items-center mb-3">
+                        {%if invoiceItem.product.product.productImg%}
+                            <img src="{{invoiceItem.product.product.productImg.url}}" width="170" alt="product image"/>
+                        {%endif%}
+                    </div>
+                    <div class="text-center mb-2 fw-bold">{{invoiceItem.product}}</div>
+                    <div class="text-center mb-1">{{invoiceItem.product.product.brand}} - {{invoiceItem.product.product.category}}</div>
                     <div class="text-center">Quantity: {{invoiceItem.quantity}}</div>
                     <div class="mt-3 text-center">
                         <a href="{%url 'invoice-list' invoiceItem.token%}" class="btn btn-sm btn-outline-secondary">Cancel</a>
