--- a/Business_Solutions/templates/inventory/sales/salesPayment.html
+++ b/Business_Solutions/templates/inventory/sales/salesPayment.html
@@ -10,8 +10,8 @@
 <!-- main body -->
 {%block main%}
 <div class="inventory">
-    <div class="card height-100">
-        <div class="card">
+    <div class="card height-100 d-flex justify-content-center align-items-center">
+        <div class="card shadow-lg border-success width-50">
             <div class="card-header">Payment</div>
             <div class="card-body">
                 <form method="post">
